fix distribution